--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,7 +7,7 @@ pipelines:
             # Rebuild go/ak registry
             - cd ..
             - git clone "https://$BITBUCKET_USER:$BITBUCKET_PW_READONLY@bitbucket.org/atlassian/atlaskit-registry.git"
-            - cd atlaskit-registry && bash ./build/cdn.sh
+            - cd atlaskit-registry && ./build/cdn.sh
     master:
       - step:
           script:
