--- a/package.json
+++ b/package.json
@@ -114,8 +114,8 @@
     "test/single/integration/browserstack": "node ./build/bin/test.single.integration.browserstack.js",
     "test/single/browserstack": "./build/bin/test.single.browserstack.sh",
     "test/single/watch": "./build/bin/test.single.watch.sh",
+    "validate": "npm ls >/dev/null && ./node_modules/.bin/lerna exec -- npm ls >/dev/null",
     "validate/lint-changed": "./build/bin/lint-changed.sh",
-    "validate/npm": "npm ls >/dev/null && ./node_modules/.bin/lerna exec -- npm ls >/dev/null",
     "webpack/single": "./build/bin/webpack.single.sh"
   }
 }
