--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "protractor-cucumber-framework": "^0.6.0",
     "raw-loader": "^0.5.1",
     "react": "^15.2.1",
+    "react-dom": "^15.2.1",
     "semantic-release": "6.2.2",
     "stats.js": "^0.16.0",
     "style-loader": "^0.13.1",
