chore(registry): clean up registry commands in bitbucket-pipelines.yml

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,10 +15,7 @@ pipelines:
             - npm run release
             - npm run release/changelog
             - npm run release/announce
-            # Rebuild go/ak registry
-            - cd ..
-            - git clone "https://$BITBUCKET_USER:$BITBUCKET_PW_READONLY@bitbucket.org/atlassian/atlaskit-registry.git"
-            - cd atlaskit-registry && ./build/cdn.sh
+            - npm run release/registry
   default:
     - step:
         script:
