--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-incremental-dom": "^3.4.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
     "browserstacktunnel-wrapper": "^1.4.2",
     "camelcase": "^3.0.0",
     "commitizen": "^2.8.2",
