chore: remove private flags

--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -1,14 +1,13 @@
 {
   "name": "ak-inline-dialog",
   "version": "67.0.0",
-  "description": "",
+  "description": "An inline dialog UI component",
   "main": "dist/bundle.js",
   "webpack": "src/index.register.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-inline-dialog",
     "pre-release": "lerna-semantic-release pre"
   },
-  "private": true,
   "files": [
     "dist"
   ],
