--- a/packages/ak-layer/package.json
+++ b/packages/ak-layer/package.json
@@ -1,14 +1,13 @@
 {
   "name": "ak-layer",
   "version": "54.0.0",
-  "description": "",
+  "description": "A layer component",
   "main": "dist/bundle.js",
   "webpack": "src/index.register.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-layer",
     "pre-release": "lerna-semantic-release pre"
   },
-  "private": true,
   "files": [
     "dist"
   ],
