--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     }
   },
   "devDependencies": {
-    "@kadira/storybook": "^1.36.0",
+    "@kadira/storybook": "1.36.0",
     "akutil-polyfills": "^0.0.10",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
@@ -34,7 +34,7 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "json-loader": "^0.5.4",
-    "karma": "^1.1.1",
+    "karma": "1.1.0",
     "karma-browserstack-launcher": "^1.0.1",
     "karma-chai-plugins": "^0.7.0",
     "karma-chrome-launcher": "^1.0.1",
