chore(bump): go back to ~4.3.0 of semantic-release, as it's a peer dep of lerna-semantic-release 2

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "raw-loader": "^0.5.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
-    "semantic-release": "6.2.2",
+    "semantic-release": "~4.3.0",
     "stats.js": "^0.16.0",
     "style-loader": "^0.13.1",
     "validate-commit-message": "^3.0.1",
