chore(build): use BrowserStack local for integration tests

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,6 +1,14 @@
 image: atlassianlabs/atlaskit
 pipelines:
   branches:
+    fix-bstack-integration-test-errors:
+      - step:
+          script:
+            - npm install
+            - npm run lint
+            - npm run storybook& # runs in background
+            - npm run test/integration/browserstack
+            - npm run test/browserstack/ci
     master:
       - step:
           script:
