--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "browserstacktunnel-wrapper": "^1.4.2",
+    "browserstack-local": "1.0.0",
     "camelcase": "^3.0.0",
     "commitizen": "^2.8.2",
     "css-loader": "^0.23.1",
