--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     }
   },
   "devDependencies": {
-    "@kadira/storybook": "1.36.0",
+    "@kadira/storybook": "^1.38.0",
     "akutil-polyfills": "^0.0.11",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
