--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@kadira/storybook": "1.36.0",
+    "ak-dmd-plugin": "0.0.3",
     "akutil-polyfills": "^0.0.11",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
