--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,7 +6,7 @@ pipelines:
           script:
             - ./build/bin/last_commit_has_changes.sh || exit 0
             - ./build/bin/setup_hosts.sh
-            - npm install --progress=false
+            - npm install --no-progress
             - npm run lint
             - npm run test/browserstack/ci
             - npm run storybook& # runs in background
@@ -19,7 +19,7 @@ pipelines:
   default:
     - step:
         script:
-          - npm install --progress=false
+          - npm install --no-progress
           - npm run lint
           - npm run dist
           - npm test
