--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,6 +5,7 @@ pipelines:
       - step:
           script:
             - ./build/bin/last_commit_has_changes.sh || exit 0
+            - echo progress=false >> .npmrc
             - ./build/bin/setup_hosts.sh
             - npm install
             - npm run lint
@@ -19,6 +20,7 @@ pipelines:
   default:
     - step:
         script:
+          - echo progress=false >> .npmrc
           - npm install
           - npm run lint
           - npm run dist
