--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,6 +1,18 @@
 image: atlassianlabs/atlaskit
 pipelines:
   branches:
+    retry-integration:
+      - step:
+          script:
+            - ./build/bin/last_commit_has_changes.sh || exit 0
+            - npm config set progress false
+            - ./build/bin/setup_hosts.sh
+            - npm install
+            - npm run lint
+            - npm run test/browserstack/ci
+            - npm run storybook& # runs in background
+            - PATH="`npm bin`:$PATH" wait-on http://0.0.0.0:9001/static/preview.bundle.js
+            - npm run test/integration/browserstack
     master:
       - step:
           script:
