--- a/packages/pf-mention/package.json
+++ b/packages/pf-mention/package.json
@@ -15,7 +15,8 @@
     "ak-inline-dialog": "^69.2.0",
     "akutil-common": "^0.1.0",
     "akutil-shared-styles": "*",
-    "skatejs": "1.0.0-beta.7"
+    "skatejs": "1.0.0-beta.7",
+    "url-search-params": "^0.5.0"
   },
   "author": "Atlassian Pty. Ltd",
   "license": "Apache-2.0",
