--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,6 +1,14 @@
 image: atlassianlabs/atlaskit
 pipelines:
   branches:
+    2-browserstack-false-positive:
+      - step:
+          script:
+            - npm config set progress false
+            - ./build/bin/setup_hosts.sh
+            - npm install
+            - npm run lint
+            - npm run test/browserstack/ci
     master:
       - step:
           script:
