--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -13,8 +13,8 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "dependencies": {
-    "skatejs": "v1.0.0-beta.7",
-    "tether": "^1.3.2"
+    "skatejs": "v1.0.0-beta.8",
+    "tether": "nadiam84/tether"
   },
   "repository": {
     "type": "git",
