docs: fix up license for base package

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "ui",
     "web"
   ],
-  "license": "Proprietary",
+  "license": "Apache-2.0",
   "main": "index.js",
   "os": [
     "!win32"
