chore(registry): clean up registry npm script

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,6 +1,10 @@
 image: atlassianlabs/atlaskit
 pipelines:
   branches:
+    make-registry-build-clearer:
+      - step:
+          script:
+            - npm run release/registry
     master:
       - step:
           script:
