--- a/packages/pf-mention/package.json
+++ b/packages/pf-mention/package.json
@@ -22,6 +22,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "akutil-react": "^0.0.3",
-    "fetch-mock": "^4.6.0"
+    "fetch-mock": "^4.6.0",
+    "isomorphic-fetch": "^2.2.1"
   }
 }
