--- a/packages/akutil-cz-atlaskit-changelog/package.json
+++ b/packages/akutil-cz-atlaskit-changelog/package.json
@@ -1,7 +1,7 @@
 {
   "name": "akutil-cz-atlaskit-changelog",
   "version": "0.0.3",
-  "description": "",
+  "description": "A utility for managing the changelog of atlaskit",
   "main": "index.js",
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
