--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "@kadira/storybook": "1.36.0",
-    "ak-dmd-plugin": "0.0.3",
+    "ak-dmd-plugin": "0.0.5",
     "akutil-polyfills": "^0.0.11",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
@@ -24,7 +24,7 @@
     "cucumber": "^1.2.1",
     "cz-conventional-changelog": "^1.1.6",
     "cz-lerna-changelog": "0.2.1",
-    "dmd-bitbucket": "^0.1.9",
+    "dmd-bitbucket": "0.1.9",
     "eslint": "^2.13.1",
     "eslint-config-ak-base": "^1.1.2",
     "eslint-config-ak-cucumber": "^1.0.2",
