refactor(skate): use unique name functionality
affects: ak-avatar, ak-inline-dialog, ak-layer, akutil-component-template, pf-mention

When using HMR, Skate now re-registers the element with a new name

--- a/packages/akutil-component-template/package.json
+++ b/packages/akutil-component-template/package.json
@@ -3,7 +3,7 @@
   "version": "3.1.1",
   "description": "akutil-component-template webcomponent",
   "main": "dist/bundle.js",
-  "webpack": "src/index.register.js",
+  "webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single akutil-component-template"
   },
