--- a/packages/ak-avatar/package.json
+++ b/packages/ak-avatar/package.json
@@ -3,7 +3,7 @@
   "version": "0.13.1",
   "description": "",
   "main": "dist/bundle.js",
-  "webpack": "src/index.register.js",
+  "webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-avatar"
   },
