--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -3,7 +3,7 @@
   "version": "69.2.1",
   "description": "An inline dialog UI component",
   "main": "dist/bundle.js",
-  "webpack": "src/index.register.js",
+  "webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-inline-dialog",
     "pre-release": "lerna-semantic-release pre"
