--- a/packages/ak-layer/package.json
+++ b/packages/ak-layer/package.json
@@ -3,7 +3,7 @@
   "version": "56.1.1",
   "description": "A layer component",
   "main": "dist/bundle.js",
-  "webpack": "src/index.register.js",
+  "webpack": "src/index.js",
   "scripts": {
     "prepublish": "cd ../.. && npm run prepublish/single ak-layer",
     "pre-release": "lerna-semantic-release pre"
