--- a/packages/editorkit-dropdown/package.json
+++ b/packages/editorkit-dropdown/package.json
@@ -20,6 +20,7 @@
     "akutil-react": "*",
     "akutil-shared-styles": "*",
     "classnames": "^2.2.5",
+    "editor-button": "*",
     "skatejs": "1.0.0-beta.7"
   }
 }
