--- a/packages/akutil-shared-styles/package.json
+++ b/packages/akutil-shared-styles/package.json
@@ -7,7 +7,7 @@
     "src"
   ],
   "author": "Atlassian Pty Ltd",
-  "license": "Atlassian Design Guidelines License",
+  "license": "SEE LICENSE IN LICENSE.md",
   "repository": {
     "type": "git",
     "url": "https://bitbucket.org/atlassian/atlaskit"
