refactor(external resources): Make story use a local image (data-url)
affects: ak-avatar

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-ak-stories": "^2.0.0",
     "eslint-config-ak-tests": "^1.0.2",
     "eslint-friendly-formatter": "^2.0.5",
+    "file-loader": "^0.9.0",
     "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "html-loader": "^0.4.3",
     "json-loader": "^0.5.4",
@@ -59,6 +60,7 @@
     "semantic-release": "~4.3.0",
     "stats.js": "^0.16.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "validate-commit-message": "^3.0.1",
     "wait-on": "^1.5.2",
     "webpack": "^1.13.1",
