--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-config-ak-stories": "^2.0.0",
     "eslint-config-ak-tests": "^1.0.2",
     "eslint-friendly-formatter": "^2.0.5",
+    "eslint-import-resolver-webpack": "^0.4.0",
+    "eslint-plugin-import": "^1.11.0",
     "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "html-loader": "^0.4.3",
     "json-loader": "^0.5.4",
