chore: fix retries

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "raw-loader": "^0.5.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
-    "retry-cli": "^0.3.0",
+    "retry-cli": "joscha/retry-cli#0a814f2",
     "semantic-release": "~4.3.0",
     "stats.js": "^0.16.0",
     "style-loader": "^0.13.1",
