--- a/packages/pf-mention/package.json
+++ b/packages/pf-mention/package.json
@@ -25,5 +25,9 @@
   "devDependencies": {
     "akutil-react": "^0.0.3",
     "fetch-mock": "^4.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/atlassian/atlaskit"
   }
 }
