--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -25,5 +25,5 @@ pipelines:
           - npm install
           - npm run lint
           - npm run dist
-          - npm test -- --browsers=Chrome
+          - npm run test/ci -- --browsers=Chrome
           - npm run test/browserstack/ci
