--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-import-resolver-webpack": "^0.4.0",
     "eslint-plugin-import": "^1.11.0",
     "file-loader": "^0.9.0",
+    "gremlins.js": "marmelab/gremlins.js#699af579a2f3e36cd3ba1d68c13893e80e40e674",
     "jsdoc-to-markdown": "^1.3.6",
     "json-loader": "^0.5.4",
     "karma": "1.1.0",
