fix: Pin prosemirror dependency to a stable version.
affects: editor-toolbar

--- a/packages/editor-toolbar/package.json
+++ b/packages/editor-toolbar/package.json
@@ -25,6 +25,6 @@
     "editor-content": "*",
     "editor-icon": "*",
     "editor-toolbar-text-formatting": "*",
-    "prosemirror": "*"
+    "prosemirror": "0.8.3"
   }
 }
