--- a/packages/editor-button/package.json
+++ b/packages/editor-button/package.json
@@ -12,8 +12,8 @@
   "files": [
     "dist"
   ],
-  "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
+  "author": "Atlassian Pty Ltd",
   "dependencies": {
     "akutil-common": "0.1.0",
     "akutil-shared-styles": "*",
@@ -23,5 +23,9 @@
   "devDependencies": {
     "akutil-react": "0.0.3",
     "editor-icon": "*"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/atlassian/atlaskit"
   }
 }
