--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -25,4 +25,4 @@ pipelines:
           - npm install
           - npm run lint
           - npm run dist
-          - npm run test/pipelines-branch
+          - BRANCH_BUILD=1 npm run test/pipelines-branch
