refactor(component): refactor according to spec, ak-navigation becomes one component. ak-page gets f
affects: ak-navigation, ak-page

--- a/packages/ak-navigation/package.json
+++ b/packages/ak-navigation/package.json
@@ -12,8 +12,7 @@
   ],
   "dependencies": {
     "akutil-shared-styles": "*",
-    "ak-navigation-container": "*",
-    "ak-navigation-link": "*",
+    "ak-page": "*",
     "skatejs": "1.0.0-beta.10"
   },
   "author": "Atlassian Pty Ltd",
