--- a/packages/ak-editor-toolbar-block-type/package.json
+++ b/packages/ak-editor-toolbar-block-type/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ak-editor-toolbar-block-type",
   "version": "0.0.0",
-  "description": "",
+  "description": "An block type dropdown selector",
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
@@ -22,5 +22,9 @@
   },
   "devDependencies": {
     "ak-editor-toolbar": "2.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://bitbucket.org/atlassian/atlaskit"
   }
 }
