--- a/packages/ak-editor-hyperlink-popup-button/package.json
+++ b/packages/ak-editor-hyperlink-popup-button/package.json
@@ -21,7 +21,8 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "akutil-react": "^0.0.3"
+    "akutil-react": "^0.0.3",
+    "ak-editor-toolbar": "^2.0.0"
   },
   "repository": {
     "type": "git",
