--- a/packages/ak-layer/package.json
+++ b/packages/ak-layer/package.json
@@ -15,7 +15,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "akutil-common": "^0.1.0",
-    "akutil-shared-styles": "*",
+    "akutil-shared-styles": "^33.0.2",
     "skatejs": "v1.0.0-beta.12"
   },
   "repository": {
