--- a/packages/ak-navigation/package.json
+++ b/packages/ak-navigation/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "akutil-shared-styles": "*",
     "ak-page": "*",
+    "ak-icon": "*",
     "skatejs": "1.0.0-beta.10"
   },
   "author": "Atlassian Pty Ltd",
