--- a/packages/ak-editor-hyperlink-popup/package.json
+++ b/packages/ak-editor-hyperlink-popup/package.json
@@ -11,9 +11,9 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-shared-styles": "*",
-    "akutil-common": "*",
-    "ak-layer": "*",
+    "akutil-shared-styles": "^33.0.2",
+    "akutil-common": "^0.1.0",
+    "ak-layer": "^56.3.1",
     "skatejs": "1.0.0-beta.12"
   },
   "author": "Atlassian Pty Ltd",
@@ -23,7 +23,7 @@
     "ak-editor-icon": "^2.0.0",
     "ak-editor-button": "^2.0.0",
     "ak-editor-toolbar": "^2.0.0",
-    "ak-editor-hyperlink-popup-button": "*"
+    "ak-editor-hyperlink-popup-button": "^0.0.1"
   },
   "repository": {
     "type": "git",
