--- a/packages/ak-editor-toolbar-hyperlink/package.json
+++ b/packages/ak-editor-toolbar-hyperlink/package.json
@@ -13,10 +13,10 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-shared-styles": "*",
-    "ak-editor-button": "2.0.0",
-    "ak-editor-icon": "2.0.0",
-    "skatejs": "1.0.0-beta.12"
+    "akutil-shared-styles": "^33.0.2",
+    "ak-editor-button": "^2.0.0",
+    "ak-editor-icon": "^2.0.0",
+    "skatejs": "^1.0.0-beta.12"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
