feat(blockType): use overlay package

--- a/packages/ak-editor-toolbar-block-type/package.json
+++ b/packages/ak-editor-toolbar-block-type/package.json
@@ -18,6 +18,7 @@
     "akutil-shared-styles": "*",
     "classnames": "^2.2.5",
     "ak-editor-button": "2.0.0",
+    "ak-editor-overlay": "0.0.0",
     "skatejs": "1.0.0-beta.12"
   },
   "devDependencies": {
