--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -17,6 +17,7 @@
     "akutil-common": "^0.1.0",
     "akutil-shared-styles": "^33.0.2",
     "ak-layer": "^56.3.1",
+    "ak-blanket": "*",
     "skatejs": "v1.0.0-beta.12",
     "web-animations-js": "^2.2.1"
   },
