--- a/packages/ak-editor-hyperlink-popup/package.json
+++ b/packages/ak-editor-hyperlink-popup/package.json
@@ -23,7 +23,8 @@
     "ak-editor-icon": "^2.0.0",
     "ak-editor-button": "^2.0.0",
     "ak-editor-toolbar": "^2.0.0",
-    "ak-editor-toolbar-hyperlink": "^0.0.1"
+    "ak-editor-toolbar-hyperlink": "^0.0.1",
+    "ak-editor-overlay": "0.0.0"
   },
   "repository": {
     "type": "git",
