--- a/packages/ak-editor-icon/package.json
+++ b/packages/ak-editor-icon/package.json
@@ -12,7 +12,7 @@
     "dist",
     "src"
   ],
-  "license": "Atlassian Design Guidelines License",
+  "license": "SEE LICENSE IN LICENSE",
   "author": "Atlassian Pty Ltd",
   "dependencies": {
     "skatejs": "1.0.0-beta.12"
