--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,7 @@ pipelines:
             - npm config set progress false
             - ./build/bin/setup_hosts.sh
             - npm install
+            - npm run validate/package.json
             - npm run lint
             - npm run test/browserstack/ci
             - npm run storybook& # runs in background
@@ -23,6 +24,7 @@ pipelines:
         script:
           - npm config set progress false
           - npm install
+          - npm run validate/package.json
           - npm run lint
           - npm run dist
           - npm run test/pipelines-branch
