--- a/packages/ak-editor-hyperlink-popup/package.json
+++ b/packages/ak-editor-hyperlink-popup/package.json
@@ -14,7 +14,8 @@
     "akutil-shared-styles": "^33.0.2",
     "akutil-common": "^0.1.0",
     "ak-layer": "^56.3.1",
-    "skatejs": "1.0.0-beta.12"
+    "skatejs": "1.0.0-beta.12",
+    "classnames": "^2.2.5"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
