--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@kadira/storybook": "^1.38.0",
-    "ak-dmd-plugin": "0.0.8",
+    "ak-dmd-plugin": "^0.0.9",
     "akutil-polyfills": "^0.0.11",
     "autoprefixer": "^6.3.7",
     "babel-core": "^6.10.4",
