--- a/packages/ak-editor-button-link/package.json
+++ b/packages/ak-editor-button-link/package.json
@@ -14,7 +14,7 @@
   "license": "Apache-2.0",
   "author": "Atlassian Pty Ltd",
   "dependencies": {
-    "akutil-shared-styles": "*",
+    "akutil-shared-styles": "^33.0.2",
     "skatejs": "1.0.0-beta.12"
   },
   "devDependencies": {
