--- a/packages/ak-navigation/package.json
+++ b/packages/ak-navigation/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ak-navigation",
   "version": "0.0.0",
+  "private": "true",
   "description": "ak-navigation webcomponent",
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
