--- a/packages/ak-editor-hyperlink-popup/package.json
+++ b/packages/ak-editor-hyperlink-popup/package.json
@@ -24,7 +24,7 @@
     "ak-editor-icon": "^2.0.0",
     "ak-editor-button": "^2.0.0",
     "ak-editor-toolbar": "^2.0.0",
-    "ak-editor-overlay": "0.0.0"
+    "ak-blanket": "^0.0.0"
   },
   "repository": {
     "type": "git",
