--- a/packages/ak-editor-toolbar-hyperlink/package.json
+++ b/packages/ak-editor-toolbar-hyperlink/package.json
@@ -16,7 +16,7 @@
     "akutil-shared-styles": "^33.0.2",
     "ak-editor-button": "^2.0.0",
     "ak-editor-icon": "^2.0.0",
-    "ak-editor-hyperlink-popup": "*",
+    "ak-editor-popup": "*",
     "ak-editor-hyperlink-popup-text-input": "*",
     "skatejs": "1.0.0-beta.12"
   },
