--- a/packages/ak-editor-toolbar-block-type/package.json
+++ b/packages/ak-editor-toolbar-block-type/package.json
@@ -21,8 +21,10 @@
     "skatejs": "1.0.0-beta.12"
   },
   "devDependencies": {
-    "akutil-react": "0.0.3",
-    "ak-editor-toolbar": "2.0.0"
+    "akutil-react": "^0.0.3",
+    "ak-editor-toolbar": "^2.0.0",
+    "ak-editor-content": "^2.0.0",
+    "prosemirror": "^0.8.3"
   },
   "repository": {
     "type": "git",
