--- a/packages/ak-editor-toolbar/package.json
+++ b/packages/ak-editor-toolbar/package.json
@@ -18,9 +18,9 @@
     "skatejs": "1.0.0-beta.12"
   },
   "devDependencies": {
-    "akutil-react": "0.0.3",
+    "akutil-react": "^0.0.3",
     "ak-editor-button": "*",
-    "ak-editor-content": "*",
+    "ak-editor-content": "^2.0.0",
     "ak-editor-icon": "*",
     "ak-editor-toolbar-text-formatting": "*",
     "prosemirror": "0.8.3"
