--- a/packages/ak-badge/package.json
+++ b/packages/ak-badge/package.json
@@ -11,8 +11,10 @@
     "dist"
   ],
   "dependencies": {
+    "akutil-common": "^0.1.0",
     "akutil-shared-styles": "*",
-    "skatejs": "1.0.0-beta.10"
+    "classnames": "^2.2.5",
+    "skatejs": "1.0.0-beta.12"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
