--- a/packages/ak-tabs/package.json
+++ b/packages/ak-tabs/package.json
@@ -12,7 +12,7 @@
   ],
   "dependencies": {
     "akutil-shared-styles": "*",
-    "skatejs": "1.0.0-beta.13"
+    "skatejs": "1.0.1"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
