--- a/packages/ak-editor-popup/package.json
+++ b/packages/ak-editor-popup/package.json
@@ -13,8 +13,8 @@
   "dependencies": {
     "akutil-shared-styles": "^33.0.2",
     "ak-layer": "^56.3.1",
-    "skatejs": "1.0.0-beta.12",
-    "classnames": "^2.2.5"
+    "classnames": "^2.2.5",
+    "skatejs": "1.x"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
