--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -18,7 +18,7 @@
     "akutil-shared-styles": "^33.0.2",
     "ak-layer": "^56.3.1",
     "ak-blanket": "^0.0.0",
-    "skatejs": "v1.0.0-beta.12",
+    "skatejs": "1.x",
     "web-animations-js": "^2.2.1"
   },
   "devDependencies": {
