--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -14,7 +14,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "keycode": "^2.1.2",
-    "skatejs": "v1.0.0-beta.12",
+    "skatejs": "1.x",
     "tether": "nadiam84/tether"
   },
   "repository": {
