--- a/packages/ak-editor-popup/package.json
+++ b/packages/ak-editor-popup/package.json
@@ -22,8 +22,7 @@
     "akutil-react": "^0.0.3",
     "ak-editor-icon": "^2.0.0",
     "ak-editor-button": "^2.0.0",
-    "ak-editor-toolbar": "^2.0.0",
-    "ak-blanket": "^0.0.0"
+    "ak-editor-toolbar": "^2.0.0"
   },
   "repository": {
     "type": "git",
