--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -22,6 +22,7 @@ pipelines:
     - step:
         script:
           - npm config set progress false
+          - ./build/bin/setup_hosts.sh
           - npm install
           - npm run lint
           - npm run dist
