--- a/packages/ak-navigation/package.json
+++ b/packages/ak-navigation/package.json
@@ -14,6 +14,7 @@
     "akutil-shared-styles": "*",
     "ak-page": "^1.0.0",
     "ak-icon": "^1.0.0",
+    "classnames": "^2.2.5",
     "skatejs": "1.0.0-beta.10"
   },
   "author": "Atlassian Pty Ltd",
