--- a/packages/ak-page/package.json
+++ b/packages/ak-page/package.json
@@ -12,6 +12,7 @@
   ],
   "dependencies": {
     "akutil-shared-styles": "^33.0.2",
+    "classnames": "^2.2.5",
     "skatejs": "1.0.0-beta.10"
   },
   "author": "Atlassian Pty Ltd",
