fix: Remove src/ from distributed package.
affects: ak-editor-icon

FAB-613

--- a/packages/ak-editor-icon/package.json
+++ b/packages/ak-editor-icon/package.json
@@ -9,8 +9,7 @@
     "pre-release": "lerna-semantic-release pre"
   },
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "license": "SEE LICENSE IN LICENSE",
   "author": "Atlassian Pty Ltd",
