--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,7 +7,8 @@ pipelines:
             - ./build/bin/last_commit_has_changes.sh || exit 0
             - npm config set progress false
             - ./build/bin/setup_hosts.sh
-            - "git config --global url.\"https://github.com/\".insteadOf git@github.com:"
+            - >
+              git config --global url."https://github.com/".insteadOf git@github.com:
             - npm install
             - npm run lint
             - npm run test/browserstack/ci
