--- a/packages/ak-navigation/package.json
+++ b/packages/ak-navigation/package.json
@@ -15,7 +15,7 @@
     "ak-page": "^1.0.0",
     "ak-icon": "^1.0.0",
     "classnames": "^2.2.5",
-    "skatejs": "1.0.0-beta.10"
+    "skatejs": "^1.0.2"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
