chore(package): fix version on 0.0.4 (no caret, as pre-1.0.0)
affects: ak-avatar, ak-blanket, ak-editor-button, ak-editor-button-link, ak-editor-content, ak-editor-hyperlink-edit, ak-editor-icon, ak-editor-popup, ak-editor-popup-text-input, ak-editor-toolbar, ak-editor-toolbar-block-type, ak-editor-toolbar-hyperlink, ak-editor-toolbar-text-formatting, ak-inline-dialog, akutil-component-template, pf-mention

--- a/packages/ak-editor-hyperlink-edit/package.json
+++ b/packages/ak-editor-hyperlink-edit/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "ak-editor-content": "^2.0.0",
-    "akutil-react": "^0.0.4",
+    "akutil-react": "0.0.4",
     "prosemirror": "^0.8.3"
   },
   "repository": {
