--- a/packages/ak-editor-toolbar/package.json
+++ b/packages/ak-editor-toolbar/package.json
@@ -18,7 +18,7 @@
     "skatejs": "1.0.0-beta.12"
   },
   "devDependencies": {
-    "akutil-react": "^0.0.4",
+    "akutil-react": "0.0.4",
     "ak-editor-button": "*",
     "ak-editor-content": "^2.0.0",
     "ak-editor-icon": "*",
