--- a/packages/pf-mention/package.json
+++ b/packages/pf-mention/package.json
@@ -27,7 +27,7 @@
     "url": "https://bitbucket.org/atlassian/atlaskit"
   },
   "devDependencies": {
-    "akutil-react": "^0.0.4",
+    "akutil-react": "0.0.4",
     "fetch-mock": "^4.6.0"
   }
 }
