chore(package): use caret for akutil-react dependency
affects: ak-avatar, ak-blanket, ak-editor-button, ak-editor-button-link, ak-editor-content, ak-editor-hyperlink-edit, ak-editor-icon, ak-editor-popup, ak-editor-popup-text-input, ak-editor-toolbar, ak-editor-toolbar-block-type, ak-editor-toolbar-hyperlink, ak-editor-toolbar-text-formatting, ak-inline-dialog, akutil-component-template, pf-mention

--- a/packages/ak-editor-icon/package.json
+++ b/packages/ak-editor-icon/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "idomizer": "^0.5.2",
     "loader-utils": "^0.2.15",
-    "akutil-react": "0.0.4"
+    "akutil-react": "^0.0.4"
   },
   "repository": {
     "type": "git",
