--- a/packages/ak-avatar/package.json
+++ b/packages/ak-avatar/package.json
@@ -19,7 +19,7 @@
     "skatejs": "1.0.0-beta.12"
   },
   "devDependencies": {
-    "akutil-react": "0.0.4"
+    "akutil-react": "^0.0.4"
   },
   "repository": {
     "type": "git",
