--- a/packages/ak-editor-content/package.json
+++ b/packages/ak-editor-content/package.json
@@ -18,7 +18,7 @@
     "skatejs": "1.0.0-beta.12"
   },
   "devDependencies": {
-    "akutil-react": "0.0.4"
+    "akutil-react": "^0.0.4"
   },
   "repository": {
     "type": "git",
