--- a/packages/ak-editor-popup/package.json
+++ b/packages/ak-editor-popup/package.json
@@ -19,7 +19,7 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "akutil-react": "0.0.4",
+    "akutil-react": "^0.0.4",
     "ak-editor-icon": "^2.0.0",
     "ak-editor-button": "^2.0.0",
     "ak-editor-toolbar": "^2.0.0",
