--- a/packages/ak-editor-toolbar-text-formatting/package.json
+++ b/packages/ak-editor-toolbar-text-formatting/package.json
@@ -20,7 +20,7 @@
     "skatejs": "1.0.0-beta.12"
   },
   "devDependencies": {
-    "akutil-react": "0.0.4",
+    "akutil-react": "^0.0.4",
     "prosemirror": "*"
   },
   "repository": {
