--- a/packages/ak-radio-button/package.json
+++ b/packages/ak-radio-button/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "ak-button": "*",
     "akutil-shared-styles": "*",
-    "skatejs": "1.0.0-beta.12"
+    "skatejs": "1.0.2"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
