feat(component): Truncate the label if only a single label is visible
affects: ak-tabs

--- a/packages/ak-tabs/package.json
+++ b/packages/ak-tabs/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "akutil-shared-styles": "*",
     "akutil-common": "^0.1.0",
+    "classnames": "^2.2.5",
     "skatejs": "1.0.1"
   },
   "author": "Atlassian Pty Ltd",
