--- a/packages/ak-button/package.json
+++ b/packages/ak-button/package.json
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "akutil-shared-styles": "*",
-    "skatejs": "1.0.2"
+    "skatejs": "1.0.2",
+    "akutil-common": "^0.2.1"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
