--- a/packages/ak-button/package.json
+++ b/packages/ak-button/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "akutil-shared-styles": "*",
     "skatejs": "1.0.2",
-    "akutil-common": "^0.2.1"
+    "akutil-common": "^0.2.1",
+    "ak-editor-icon": "*"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "devDependencies": {
-    "akutil-react": "^0.0.4",
-    "ak-editor-icon": "*"
+    "akutil-react": "^0.0.4"
   },
   "repository": {
     "type": "git",
