feat(Use specific publicly available packages.):
affects: ak-editor-bitbucket, ak-editor-button, ak-editor-toolbar, ak-editor-toolbar-hyperlink

--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -14,14 +14,14 @@
   "license": "Apache-2.0",
   "author": "Atlassian Pty Ltd",
   "dependencies": {
-    "@atlassian/editorkit-hyperlink-plugin": "*",
-    "@atlassian/editorkit-markdown-inputrules-plugin": "^0.0.8",
+    "atlassian-editorkit-hyperlink-plugin": "^0.0.18",
+    "atlassian-editorkit-markdown-inputrules-plugin": "^0.0.18",
     "ak-editor-content": "^2.0.1",
     "ak-editor-footer": "*",
     "ak-editor-toolbar": "^2.0.2",
-    "ak-editor-toolbar-block-type": "*",
-    "ak-editor-toolbar-hyperlink": "*",
-    "ak-editor-toolbar-text-formatting": "*",
+    "ak-editor-toolbar-block-type": "^0.0.1",
+    "ak-editor-toolbar-hyperlink": "^0.0.1",
+    "ak-editor-toolbar-text-formatting": "^2.0.0",
     "browserkeymap": "^2.0.1",
     "markdown-it": "^7.0.0",
     "prosemirror": "^0.8.3",
