--- a/packages/ak-editor-toolbar-hyperlink/package.json
+++ b/packages/ak-editor-toolbar-hyperlink/package.json
@@ -16,8 +16,8 @@
     "akutil-shared-styles": "^33.0.2",
     "ak-editor-button": "^2.0.0",
     "ak-editor-icon": "^2.0.0",
-    "ak-editor-popup": "*",
-    "ak-editor-popup-text-input": "*",
+    "ak-editor-popup": "^0.0.2",
+    "ak-editor-popup-text-input": "^0.1.0",
     "skatejs": "1.0.0-beta.12"
   },
   "author": "Atlassian Pty Ltd",
