--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -17,7 +17,7 @@
     "atlassian-editorkit-hyperlink-plugin": "^0.0.18",
     "atlassian-editorkit-markdown-inputrules-plugin": "^0.0.18",
     "ak-editor-content": "^2.0.1",
-    "ak-editor-footer": "*",
+    "ak-editor-footer": "^0.1.0",
     "ak-editor-toolbar": "^2.0.2",
     "ak-editor-toolbar-block-type": "^0.0.1",
     "ak-editor-toolbar-hyperlink": "^0.0.1",
