--- a/packages/ak-blanket/package.json
+++ b/packages/ak-blanket/package.json
@@ -14,7 +14,7 @@
     "akutil-common": "^0.2.0",
     "akutil-shared-styles": "*",
     "classnames": "^2.2.5",
-    "skatejs": "1.0.0-beta.12"
+    "skatejs": "1.0.2"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
