--- a/packages/ak-editor-button/package.json
+++ b/packages/ak-editor-button/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "akutil-shared-styles": "*",
     "classnames": "^2.2.5",
-    "skatejs": "1.0.0-beta.12"
+    "skatejs": "1.0.2"
   },
   "devDependencies": {
     "akutil-react": "^0.0.4",
