--- a/packages/ak-editor-popup/package.json
+++ b/packages/ak-editor-popup/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "akutil-shared-styles": "^33.0.2",
     "ak-layer": "^56.4.0",
-    "skatejs": "1.0.0-beta.12",
+    "skatejs": "1.0.2",
     "classnames": "^2.2.5"
   },
   "author": "Atlassian Pty Ltd",
