--- a/packages/ak-editor-toolbar-hyperlink/package.json
+++ b/packages/ak-editor-toolbar-hyperlink/package.json
@@ -18,7 +18,7 @@
     "ak-editor-icon": "^2.0.0",
     "ak-editor-popup": "*",
     "ak-editor-popup-text-input": "*",
-    "skatejs": "1.0.0-beta.12"
+    "skatejs": "1.0.2"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
