--- a/packages/ak-editor-toolbar-block-type/package.json
+++ b/packages/ak-editor-toolbar-block-type/package.json
@@ -25,6 +25,7 @@
     "ak-editor-toolbar": "^2.0.0",
     "ak-editor-content": "^2.0.0",
     "atlassian-editorkit-block-type-plugin": "0.0.7",
+    "lodash.invert": "^4.2.0",
     "prosemirror": "^0.8.3"
   },
   "repository": {
