--- a/packages/ak-navigation/package.json
+++ b/packages/ak-navigation/package.json
@@ -21,6 +21,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "akutil-react": "^0.0.3",
+    "keycode": "^2.1.2",
     "react-lorem-component": "^0.10.0"
   },
   "repository": {
