--- a/packages/akutil-common/package.json
+++ b/packages/akutil-common/package.json
@@ -13,7 +13,7 @@
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
   "dependencies": {
-    "@atlassian/tether": "^1.3.4",
+    "atlassian-tether": "^1.3.4",
     "keycode": "^2.1.2",
     "skatejs": "v1.0.0-beta.12"
   },
