--- a/packages/ak-dropdown/package.json
+++ b/packages/ak-dropdown/package.json
@@ -15,7 +15,8 @@
     "akutil-common": "*",
     "skatejs": "^1.0.2",
     "ak-layer": "^56.4.0",
-    "classnames": "^2.2.5"
+    "classnames": "^2.2.5",
+    "keycode": "^2.1.2"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
