--- a/packages/ak-button/package.json
+++ b/packages/ak-button/package.json
@@ -11,7 +11,7 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-shared-styles": "*",
+    "akutil-shared-styles": "^33.1.0",
     "skatejs": "^1.0.2",
     "akutil-common": "^0.2.1"
   },
