--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "validate-commit-message": "^3.0.1",
     "wait-on": "^1.5.2",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "glob": "^7.0.5"
   },
   "engines": {
     "npm": ">=3.8",
