--- a/packages/akutil-polyfills/package.json
+++ b/packages/akutil-polyfills/package.json
@@ -12,9 +12,7 @@
     "prepublish": "cd ../.. && npm run prepublish/single akutil-polyfills"
   },
   "dependencies": {
-    "es6-map": "^0.1.4",
-    "skatejs-named-slots": "^1.0.1",
-    "webcomponents.js": "webcomponents/webcomponentsjs#b77ca74"
+    "skatejs-web-components": "1.x"
   },
   "repository": {
     "type": "git",
