--- a/packages/akutil-polyfills/package.json
+++ b/packages/akutil-polyfills/package.json
@@ -12,7 +12,7 @@
     "prepublish": "cd ../.. && npm run prepublish/single akutil-polyfills"
   },
   "dependencies": {
-    "core-js": "^2.4.1",
+    "es6-symbol": "^3.1.0",
     "es6-map": "^0.1.4",
     "skatejs-named-slots": "^1.0.1",
     "webcomponents.js": "webcomponents/webcomponentsjs#b77ca74"
