fix(registry): install panop via npm instead of git

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,6 +1,10 @@
 image: atlassianlabs/atlaskit
 pipelines:
   branches:
+    install-panop-npm-proxy:
+      - step:
+          script:
+            - npm run release/registry
     master:
       - step:
           script:
