--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -5,7 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single ak-editor-bitbucket -- --bundle-deps",
+    "prepublish": "cd .. && npm run prepublish/single ak-editor-bitbucket",
     "pre-release": "lerna-semantic-release pre"
   },
   "files": [
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "akutil-react": "0.0.4",
-    "akutil-shared-styles": "*"
+    "akutil-shared-styles": "^33.1.0"
   },
   "repository": {
     "type": "git",
