--- a/packages/akutil-component-template/package.json
+++ b/packages/akutil-component-template/package.json
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "akutil-shared-styles": "*",
-    "skatejs": "1.0.0-beta.12"
+    "skatejs": "1.x",
+    "akutil-common": "0.x"
   },
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
