--- a/packages/akutil-component-template/package.json
+++ b/packages/akutil-component-template/package.json
@@ -12,7 +12,7 @@
   ],
   "dependencies": {
     "akutil-shared-styles": "*",
-    "skatejs": "1.x",
+    "skatejs": "1.0.0-beta.12",
     "akutil-common": "0.x"
   },
   "author": "Atlassian Pty Ltd",
