fix: Don't bundle deps for ak-editor-bitbucket.
affects: ak-editor-bitbucket

--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -5,7 +5,7 @@
   "main": "dist/bundle.js",
   "webpack": "src/index.js",
   "scripts": {
-    "prepublish": "cd .. && npm run prepublish/single ak-editor-bitbucket -- --bundle-deps",
+    "prepublish": "cd .. && npm run prepublish/single ak-editor-bitbucket -- --library-target=commonjs",
     "pre-release": "lerna-semantic-release pre"
   },
   "files": [
