--- a/packages/ak-editor-button-link/package.json
+++ b/packages/ak-editor-button-link/package.json
@@ -15,7 +15,7 @@
   "author": "Atlassian Pty Ltd",
   "dependencies": {
     "akutil-shared-styles": "^33.0.2",
-    "skatejs": "1.x"
+    "skatejs": "^1.0.0"
   },
   "devDependencies": {
     "akutil-react": "^0.0.4",
