--- a/packages/ak-inline-dialog/package.json
+++ b/packages/ak-inline-dialog/package.json
@@ -18,7 +18,7 @@
     "akutil-shared-styles": "^33.0.2",
     "ak-layer": "^56.4.0",
     "ak-blanket": "^1.0.0",
-    "skatejs": "1.x",
+    "skatejs": "^1.0.0",
     "web-animations-js": "^2.2.1"
   },
   "devDependencies": {
