--- a/packages/ak-editor-content/package.json
+++ b/packages/ak-editor-content/package.json
@@ -15,7 +15,7 @@
   "author": "Atlassian Pty Ltd",
   "dependencies": {
     "akutil-shared-styles": "*",
-    "skatejs": "1.0.0-beta.12"
+    "skatejs": "file:///Users/smao/Documents/skatejs"
   },
   "devDependencies": {
     "akutil-react": "^0.0.4"
