--- a/packages/ak-editor-toolbar-block-type/package.json
+++ b/packages/ak-editor-toolbar-block-type/package.json
@@ -18,7 +18,7 @@
     "classnames": "^2.2.5",
     "ak-editor-button": "2.0.0",
     "ak-blanket": "^1.0.0",
-    "skatejs": "1.0.0-beta.12"
+    "skatejs": "file:///Users/smao/Documents/skatejs"
   },
   "devDependencies": {
     "akutil-react": "^0.0.4",
