chore(package): Update dependencies
affects: ak-avatar, ak-badge, ak-blanket, ak-icon, ak-inline-dialog, ak-layer, ak-navigation, ak-page, akutil-component-template, pf-mention

--- a/packages/akutil-component-template/package.json
+++ b/packages/akutil-component-template/package.json
@@ -11,7 +11,7 @@
     "dist"
   ],
   "dependencies": {
-    "akutil-common": "0.x",
+    "akutil-common": "^0.3.0",
     "akutil-shared-styles": "*",
     "skatejs": "^1.0.0"
   },
