chore(textFormatting): add the plugin

--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -24,6 +24,7 @@
     "atlassian-editorkit-hyperlink-plugin": "^0.0.20",
     "atlassian-editorkit-image-upload-plugin": "^0.0.6",
     "atlassian-editorkit-markdown-inputrules-plugin": "^0.0.18",
+    "atlassian-editorkit-text-formatting-plugin": "^0.0.4",
     "browserkeymap": "^2.0.1",
     "lodash.invert": "^4.2.0",
     "markdown-it": "^7.0.0",
