feat(bitbucket): add HyperLinkPlugin

--- a/packages/ak-editor-bitbucket/package.json
+++ b/packages/ak-editor-bitbucket/package.json
@@ -20,8 +20,9 @@
     "ak-editor-toolbar-block-type": "^0.0.1",
     "ak-editor-toolbar-hyperlink": "^0.0.1",
     "ak-editor-toolbar-text-formatting": "^2.0.0",
+    "ak-editor-hyperlink-edit": "0.1.0",
     "atlassian-editorkit-block-type-plugin": "^0.0.8",
-    "atlassian-editorkit-hyperlink-plugin": "^0.0.20",
+    "atlassian-editorkit-hyperlink-plugin": "^0.0.23",
     "atlassian-editorkit-image-upload-plugin": "^0.0.6",
     "atlassian-editorkit-markdown-inputrules-plugin": "^0.0.18",
     "atlassian-editorkit-text-formatting-plugin": "^0.0.4",
